--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,35 @@
-.panda-bg-info{
+.mild-bg{
     background-color: #fceae8;
 }
 .price{
-    color: #FF136F;
+    color: #ff136f;
 }
-.panda-btn-buy-now{
+.buy-button{
     background-image: linear-gradient(to bottom, #FF589B 0%, #FF136F 100%);
-    color: white;
+    color: #fff;
     border: none;
     border-radius: 8px;
     padding: 9px 25px;
-    font-size: 16px;
+}
+.orange{
+    background-color: orange;
+}
+.orchid{
+    background-color: orchid;
+}
+.blue{
+    background-color: blue;
+}
+input{
+    display: block;
+    width: 100%;
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem .75rem;
+    color: #495057;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+}
+.margin{
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
